syntax="proto3";

package appointy.class.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option go_package="pb";

message Class{
    string id = 1;
    float area = 2;
    int32 strength = 3;
    bool is_deleted = 4;
    ClassType type = 5;
    repeated ServiceProvider instructors = 6;
    oneof charge{
        string per_instance = 7;
        int32 Lumpsum = 8;
    }
    map<string,string> metadata = 9;
    string parent = 10;
    google.protobuf.Timestamp start_date = 11;
    google.protobuf.Duration duration = 12;
    google.protobuf.Empty empty = 13;
}

message CreateClassReq{
    string parent = 1;
    Class class= 2;
}

message GetClassReq{
    string id = 1;
}

enum ClassType{
    INVALID = 0;
    REGULAR = 1;
    SERIES = 2;
}

message ServiceProvider{
    string id = 1;
    string first_name = 2;
}

message PerInstance{
    Price cost = 2;
}

message Lumpsum{
    Price cost = 1;
    int32 number_of_sessions = 2;
}

message Price{
    int32 amount = 1;
    string currency = 2;
}